--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,6 @@
     ],
     "background": {
         "scripts": ["background.js"],
-        "persistent": false
+        "persistent": true
     }
 }
